--- a/src/scss/components/_mixin.scss
+++ b/src/scss/components/_mixin.scss
@@ -31,6 +31,14 @@
   transition: $transition;
 }
 
+@mixin transform($transform...) {
+  -webkit-transform: $transform;
+  -moz-transform: $transform;
+  -ms-transform: $transform;
+  -o-transform: $transform;
+  transform: $transform;
+}
+
 @mixin box-shadow($shadow...) {
   -webkit-box-shadow: $shadow;
   -moz-box-shadow: $shadow;
