Added dropdown removed sticky nav

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -277,22 +277,91 @@ header {
 .navbar-light .navbar-nav .nav-link {
   padding: 0.5rem 0;
   position: relative;
-  transition: all 0.3s ease-in-out;
+  transition: all 0.2s ease-in-out;
   font-size: 14px;
   line-height: 16px;
   color: #0C3046;
+  font-family: futura;
+  text-transform: uppercase;
 }
 .navbar-light .navbar-nav .nav-link:hover {
-  color: #0C3046;
-  opacity: 0.5;
   font-weight: bold;
-  transition: all 0.5s ease-in-out;
+  transition: all 0.2s ease-in-out;
 }
 
 .header-text {
   font-size: 14px;
   line-height: 16px;
   color: #0C3046;
+}
+
+.dropdown-toggle {
+  display: flex;
+  align-items: center;
+}
+.dropdown-toggle::after {
+  border-top: 0;
+  border-right: 0;
+  border-bottom: 0;
+  border-left: 0;
+  background-image: url(/assets/images/arrowDown.png);
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  width: 16px;
+  height: 16px;
+}
+
+.dropdown-menu {
+  background-color: #0C3046;
+  padding: 20px 30px;
+  border-radius: 0;
+  position: relative;
+}
+.dropdown-menu li:last-child .dropdown-item {
+  padding: 0 0 0px;
+  margin-bottom: 0px;
+}
+.dropdown-menu::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 4px;
+  background-color: #F4D1AE;
+  bottom: 0;
+  left: 0;
+}
+
+.dropdown-item {
+  color: white;
+  text-transform: uppercase;
+  padding: 0 0 20px;
+  font-size: 14px;
+  font-family: futura;
+  text-transform: uppercase;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+  margin-bottom: 20px;
+  letter-spacing: 1px;
+}
+.dropdown-item:hover {
+  color: #F4D1AE;
+  background-color: transparent;
+}
+
+.level-one::before {
+  content: "";
+  position: absolute;
+  border-top: 1em solid #0C3046;
+  border-right: 1em solid transparent;
+  border-bottom: 0;
+  border-left: 1em solid transparent;
+  transform: rotate(180deg);
+  top: -10px;
+  left: 20px;
+}
+
+.navbar .nav-item:hover .dropdown-menu {
+  display: block;
 }
 
 .footer {
