--- a/src/scss/components/_homepage.scss
+++ b/src/scss/components/_homepage.scss
@@ -570,10 +570,19 @@
     justify-content: center;
     align-items: center;
     padding: 0 15px;
+    font-family: futura;
+    font-size: 14px;
+    line-height: 16px;
 
     @media only screen and (max-width: $xl) {
       width: 100% !important;
     }
+  }
+
+  option {
+    font-family: futura;
+    font-size: 14px;
+    line-height: 16px;
   }
 
   .form-floating {
@@ -587,6 +596,7 @@
     input,
     select {
       width: 278px !important;
+      padding: 10px;
 
       @media only screen and (max-width: $xl) {
         width: 100% !important;
@@ -607,5 +617,17 @@
   @media only screen and (max-width: $lg) {
     margin-top: 35px;
     width: 100%;
+  }
+}
+
+.form-btn {
+  margin-top: 18px;
+  display: flex;
+  justify-content: flex-end;
+
+  button {
+    width: 136px;
+    height: 64px;
+    padding: 0;
   }
 }
