--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1215,6 +1215,12 @@ header {
 .team .container {
   padding: 100px 50px 95px;
   background-color: #FAF6F2;
+  margin: 0 0 0 auto;
+}
+@media only screen and (max-width: 1200px) {
+  .team .container {
+    margin: 0 auto;
+  }
 }
 .team .container:last-of-type {
   border: 0px;
