--- a/src/scss/base/_universalStyles.scss
+++ b/src/scss/base/_universalStyles.scss
@@ -245,3 +245,13 @@ a {
         line-height: normal;
     }
 }
+
+.img-hover {
+    transition: all 0.5s ease;
+    
+    &:hover {
+        // filter: grayscale(100%);
+        transform: scale(1.05);
+        transition: all 0.5s ease;
+    }
+}
